--- a/.env
+++ b/.env
@@ -2,3 +2,8 @@ cds.requires.API_INSPECTIONLOT_SRV.credentials.url="https://my401292-api.s4hana.
 cds.requires.API_INSPECTIONLOT_SRV.credentials.authentication="BasicAuthentication"
 cds.requires.API_INSPECTIONLOT_SRV.credentials.username="USER_NNRG"
 cds.requires.API_INSPECTIONLOT_SRV.credentials.password="FMesUvVB}JhYD9nVbDfRoVcdEffwmVNJJScMzuzx"
+
+cds.requires.USAGEDECISIONSELDCODESET_0001.credentials.url="https://my401292-api.s4hana.cloud.sap/sap/opu/odata4/sap/api_usagedcsnseldcodeset/srvd_a2x/sap/usagedecisionseldcodeset/0001/"
+cds.requires.USAGEDECISIONSELDCODESET_0001.credentials.authentication="BasicAuthentication"
+cds.requires.USAGEDECISIONSELDCODESET_0001.credentials.username="USER_NNRG"
+cds.requires.USAGEDECISIONSELDCODESET_0001.credentials.password="FMesUvVB}JhYD9nVbDfRoVcdEffwmVNJJScMzuzx"
