Material Descrption in XML

--- a/.env
+++ b/.env
@@ -7,3 +7,9 @@ cds.requires.USAGEDECISIONSELDCODESET_0001.credentials.url="https://my401292-api
 cds.requires.USAGEDECISIONSELDCODESET_0001.credentials.authentication="BasicAuthentication"
 cds.requires.USAGEDECISIONSELDCODESET_0001.credentials.username="USER_NNRG"
 cds.requires.USAGEDECISIONSELDCODESET_0001.credentials.password="FMesUvVB}JhYD9nVbDfRoVcdEffwmVNJJScMzuzx"
+
+cds.requires.API_PRODUCT_SRV.credentials.url="https://my401292-api.s4hana.cloud.sap/sap/opu/odata/sap/API_PRODUCT_SRV"
+cds.requires.API_PRODUCT_SRV.credentials.authentication="BasicAuthentication"
+cds.requires.API_PRODUCT_SRV.credentials.username="USER_NNRG"
+cds.requires.API_PRODUCT_SRV.credentials.password="FMesUvVB}JhYD9nVbDfRoVcdEffwmVNJJScMzuzx"
+
