--- a/package.json
+++ b/package.json
@@ -40,6 +40,18 @@
       "USAGEDECISIONSELDCODESET_0001": {
         "kind": "odata",
         "model": "srv/external/USAGEDECISIONSELDCODESET_0001"
+      },
+      "API_PRODUCT_SRV": {
+        "kind": "odata-v2",
+        "model": "srv/external/API_PRODUCT_SRV",
+        "csrf": true,
+        "csrfInBatch": true,
+        "[production]": {
+          "credentials": {
+            "destination": "S4HANA",
+            "path": "/sap/opu/odata/sap/API_PRODUCT_SRV"
+          }
+        }
       }
     }
   },
